[package]
name = "cutr"
version = "0.1.0"
edition = "2021"
authors = [ "Hoge Piyo" ]

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
csv = "1.3.0"
regex = "1.11.0"
unicode-segmentation = "1.12.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
pretty_assertions = "1.4.1"
rand = "0.8.5"
